[package]
name = "file-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
notify = "5.0.0"
notify-debouncer-mini = "0.2.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "sync"] }
