[package]
name = "hawk-cli"
description = "Dead simple cli to ease github workflows management in monorepos"
repository = "https://github.com/rawnly/hawk"
version = "0.1.4"
edition = "2021"
license = "MIT"

[[bin]]
name = "hawk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
notify = "5.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
walkdir = "2.3.2"
